Fix spacing

--- a/contrib/print/_toc.sass
+++ b/contrib/print/_toc.sass
@@ -8,7 +8,7 @@
   li
     list-style-type: none
     font-weight: $title_font_weight
-    margin: 0 0 $base_font_size 0
+    margin: 0 0 ($base_font_size / 2) 0
     padding: 0
     ul
       border-top: .25pt solid black
